Fixed table view on mobile

--- a/resources/assets/sass/blog.scss
+++ b/resources/assets/sass/blog.scss
@@ -360,3 +360,8 @@ a.anchor {
     top: -5em;
   }
 }
+
+div.scrollable {
+  max-width: 100%;
+  overflow-y: scroll;
+}
